--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,27 @@
     <title>PaintJs</title>
 </head>
 <body>
+    <canvas id="jsCanvas" class="canvas"></canvas>
+    <div class="controls">
+        <div class="controls_range">
+            <input type="range" id="jsRange" min="0.1" max="5.0" value="2.5" step="0.1">
+        </div>
+        <div class="controls_btns">
+            <button id="jsMode">Fill</button>
+            <button id="jsSave">Save</button>
+        </div>
+        <div class="controls_colors" id="jsColors">
+            <div class="controls_color" style="background-color: #34495e;"></div>
+            <div class="controls_color" style="background-color: #95a5a6;"></div>
+            <div class="controls_color" style="background-color: #e74c3c;"></div>
+            <div class="controls_color" style="background-color: #e67e22;"></div>
+            <div class="controls_color" style="background-color: #f1c40f;"></div>
+            <div class="controls_color" style="background-color: #2ecc71;"></div>
+            <div class="controls_color" style="background-color: #1abc9c;"></div>
+            <div class="controls_color" style="background-color: #3498db;"></div>
+            <div class="controls_color" style="background-color: #9b59b6;"></div>
+        </div>
+    </div>
     <script src="./javascript/app.js"></script>
 </body>
 </html>
