brush 색상 변경 기능 추가 :tada:

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
             <button id="jsSave">Save</button>
         </div>
         <div class="controls_colors" id="jsColors">
-            <div class="controls_color" style="background-color: #34495e;"></div>
-            <div class="controls_color" style="background-color: #95a5a6;"></div>
-            <div class="controls_color" style="background-color: #e74c3c;"></div>
-            <div class="controls_color" style="background-color: #e67e22;"></div>
-            <div class="controls_color" style="background-color: #f1c40f;"></div>
-            <div class="controls_color" style="background-color: #2ecc71;"></div>
-            <div class="controls_color" style="background-color: #1abc9c;"></div>
-            <div class="controls_color" style="background-color: #3498db;"></div>
-            <div class="controls_color" style="background-color: #9b59b6;"></div>
+            <div class="controls_color jsColor" style="background-color: #34495e;"></div>
+            <div class="controls_color jsColor" style="background-color: #95a5a6;"></div>
+            <div class="controls_color jsColor" style="background-color: #e74c3c;"></div>
+            <div class="controls_color jsColor" style="background-color: #e67e22;"></div>
+            <div class="controls_color jsColor" style="background-color: #f1c40f;"></div>
+            <div class="controls_color jsColor" style="background-color: #2ecc71;"></div>
+            <div class="controls_color jsColor" style="background-color: #1abc9c;"></div>
+            <div class="controls_color jsColor" style="background-color: #3498db;"></div>
+            <div class="controls_color jsColor" style="background-color: #9b59b6;"></div>
         </div>
     </div>
     <script src="./javascript/app.js"></script>
