--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <input type="range" id="jsRange" min="0.1" max="5.0" value="2.5" step="0.1">
         </div>
         <div class="controls_btns">
-            <button id="jsMode">Fill</button>
+            <button id="jsMode">Draw</button>
             <button id="jsSave">Save</button>
         </div>
         <div class="controls_colors" id="jsColors">
