--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div class="controls_btns">
             <button id="jsMode">Draw</button>
             <button id="jsSave">Save</button>
+            <button id="jsClear">Clear</button>
         </div>
         <div class="controls_colors" id="jsColors">
             <div class="controls_color jsColor" style="background-color: #34495e;"></div>
